# DrugSynthMC

./: Cargo.toml  README.md
Neural/SMILES/: keras_metadata.pb  saved_model.pb
Neural/SMILES/variables/: variables.index
Neural/SMILESexplicit/: keras_metadata.pb  saved_model.pb
Neural/SMILESexplicit/variables/: variables.index
Neural/SMILESexplicit_shortcuts/: keras_metadata.pb  saved_model.pb
Neural/SMILESexplicit_shortcuts/variables/: variables.index
ngrams/: fda_ngrams_1.json  fda_ngrams_shortcuts.json  fda_ngrams_shortcuts_cycles.json  ngrams.json  zinc_ngrams_shortcuts.json
results/SMILES generated/NGRAMS10000/: NMCS.txt  Sampling.txt  UCT.txt
results/SMILES generated/NMCS/: enforced.txt  enforced1K.txt  ngram.txt  ngram1K.txt  prior.txt  prior1K.txt  random.txt  random1K.txt
results/SMILES generated/PUCT/: enforced.txt  neural1K.txt  ngram.txt  prior.txt  random.txt
results/SMILES generated/Sampling/: enforced.txt  enforced1K.txt  neural1K  ngram.txt  prior.txt  random.txt
src/: main.rs
src/methods/: BEAM.rs  BFS.rs  CSGUCT.rs  GNRPA.rs  GRAVE.rs  NMCS.rs  NMCSparallel.rs  NRPA.rs  PERM.rs  PUCT.rs  Sampling.rs  UCT.rs  lazyNMCS.rs  lazyNMCSv2.rs  lazyNMCSv3.rs  mod.rs
src/models/: SMILESgen.rs  mod.rs
src/tools/: NNreader.rs  calc.rs  mod.rs  resultSaver.rs
