[package]
name = "DrugSynthMC"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.1"
nalgebra = "0.30.1"
rand = "0.6.5"
rulinalg = "0.4.2"
dot = "0.1.4"
streaming-stats = "0.2"
chrono = "0.4.23"
lazy_static = "1.4.0"
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0"

tensorflow = "0.20.0"
anyhow = "1.0"
png = "0.17.11"

pyo3 = { version = "0.19.1", features = ["auto-initialize"] }
xml-rs = "0.8.16"